<resources>
    <string name="app_name">Exercise1</string>
    <string name="edEmail">Masukkan Email</string>
    <string name="edPass">Masukkan Password</string>
    <string name="BtnLogin">Sign-In</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="lPendaftaran">Pendaftaran</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Kembali Password </string>
    <string name="ealamat">Masukkan Alamat</string>
    <string name="eBatal">Batal</string>
    <string name="eDaftar">Daftar</string>
    <string name="eJenisKelamin">Jenis Kelamin</string>
    <string name="eAgama">Agama</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telepon</string>

</resources>